// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Camera props testing className="my-classname" 1`] = `
<Camera
  className="my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing controlled=false 1`] = `
<Camera
  controlled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing controlled=true 1`] = `
<Camera
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing default props 1`] = `
<Camera
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing disabled=false 1`] = `
<Camera
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing disabled=true 1`] = `
<Camera
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing fullTextSearchPriority=0 1`] = `
<Camera
  fullTextSearchPriority={0}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing hidden=false 1`] = `
<Camera
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing hidden=true 1`] = `
<Camera
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing id="myId" 1`] = `
<Camera
  id="myId"
/>
`;

exports[`UU5.Bricks.Camera props testing mainAttrs=undefined 1`] = `
<Camera
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing name="myName" 1`] = `
<Camera
  id="uuID"
  name="myName"
/>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="bigBox" 1`] = `
<Camera
  id="uuID"
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="bigBoxCollection" 1`] = `
<Camera
  id="uuID"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="box" 1`] = `
<Camera
  id="uuID"
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="boxCollection" 1`] = `
<Camera
  id="uuID"
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="inline" 1`] = `
<UU5.Bricks.LinkModal
  component={
    <Camera
      className={null}
      controlled={true}
      disabled={false}
      hidden={false}
      id="uuID"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
>
  Camera
</UU5.Bricks.LinkModal>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="page" 1`] = `
<Camera
  id="uuID"
  nestingLevel="page"
/>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="smallBox" 1`] = `
<UU5.Bricks.LinkModal
  component={
    <Camera
      className={null}
      controlled={true}
      disabled={false}
      hidden={false}
      id="uuID"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
>
  Camera
</UU5.Bricks.LinkModal>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="smallBoxCollection" 1`] = `
<UU5.Bricks.LinkModal
  component={
    <Camera
      className={null}
      controlled={true}
      disabled={false}
      hidden={false}
      id="uuID"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
>
  Camera
</UU5.Bricks.LinkModal>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="spa" 1`] = `
<Camera
  id="uuID"
  nestingLevel="spa"
/>
`;

exports[`UU5.Bricks.Camera props testing pureRender=false 1`] = `
<Camera
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing pureRender=true 1`] = `
<Camera
  id="uuID"
  pureRender={true}
/>
`;

exports[`UU5.Bricks.Camera props testing selected=false 1`] = `
<Camera
  id="uuID"
/>
`;

exports[`UU5.Bricks.Camera props testing selected=true 1`] = `
<Camera
  id="uuID"
  selected={true}
/>
`;

exports[`UU5.Bricks.Camera props testing style="padding:8px; borderRadius: 2px" 1`] = `
<Camera
  id="uuID"
  style="padding:8px; borderRadius: 2px"
/>
`;

exports[`UU5.Bricks.Camera props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<Camera
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Camera props testing tooltip="My Tooltip" 1`] = `
<Camera
  id="uuID"
  tooltip="My Tooltip"
/>
`;
